responsive fixed for screen size <801 to when the collapse is on

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,7 +70,7 @@ SASS MIXINS
 @media screen and (max-width:810px){
   .navbar-nav {
     padding: .6em .4em 0 0;
-    font-size: .8em;
+    font-size: .9em !important;
   } 
 }
 
